@@ -5,6 +5,7 @@
 2011-02-20  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to issue #17677: htmlArea RTE: Classes configuration is loaded twice
+	* Fixed bug #17669: htmlArea RTE: Dialogue window positioning properties not honoured
 
 2011-02-20  Jigal van Hemert  <jigal@xs4all.nl>
 
